# app/models/calendar_event.rb
@@ -1,0 +1,9 @@
+# frozen_string_literal: true
+
+class CalendarEvent < ApplicationRecord
+  include Auditable
+
+  belongs_to :project, optional: true
+
+  validates :date, presence: true
+end
